# fb2edit

./: AUTHORS  CMakeLists.txt  README  fb2edit.pro  qt-setup.sh  tarball.sh  ubuntu.sh  windows.sh
debian/: changelog  control  copyright  menu  rules
desktop/: fb2edit.desktop
rpmbuild/: fb2edit.changes  fb2edit.spec
source/: fb2app.cpp  fb2app.hpp  fb2code.cpp  fb2code.h  fb2code.hpp  fb2dlgs.cpp  fb2dlgs.hpp  fb2doc.cpp  fb2doc.h  fb2dock.cpp  fb2dock.hpp  fb2edit.h  fb2edit.pro  fb2edit.qrc  fb2enum.h  fb2find.ui  fb2head.cpp  fb2head.h  fb2head.hpp  fb2html.cpp  fb2html.h  fb2icon.cpp  fb2imgs.cpp  fb2imgs.hpp  fb2list.cpp  fb2list.hpp  fb2logs.cpp  fb2logs.hpp  fb2main.cpp  fb2main.h  fb2main.hpp  fb2mode.cpp  fb2mode.h  fb2note.cpp  fb2note.hpp  fb2note.ui  fb2page.cpp  fb2page.hpp  fb2read.cpp  fb2read.h  (+28 more)
source/images/: style.css
source/js/: export.js  get_location.js  get_status.js  insert_title.js  javascript.qrc  location.js  new_section.js  section_get.js  section_new.js  set_cursor.js
source/res/: blank.fb2  fb2edit.qrc  mainicon.rc  style.css
source/ts/: ru.qm  ru.ts
